fix img alignment, add title to sidebar's buttons

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -140,6 +140,8 @@ body {
   }
   img {
     @include size(300px);
+    display: block;
+    margin-inline: auto;
   }
 }
 
